syntax = "proto3";

import "google/protobuf/any.proto";

package p2p;

option go_package = "./messages";

enum PocketTopic {
  CONSENSUS = 0;
  P2P = 1;
}

message NetworkMessage {
  string topic = 1;
  google.protobuf.Any data = 2;
}